--- a/css/responsive.css
+++ b/css/responsive.css
@@ -51,7 +51,7 @@
     }
 
     .featured-projects {
-        top: 300px;
+        margin-top: 180px;
     }
 
     .project-image {
